# elastic-data-factory

./: CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: CODEOWNERS  Makefile  conf.py  index.rst  make.bat  notebooks.rst
elasticdatafactory/: __init__.py
elasticdatafactory/data/: field_query_mapping.json  make_dataset.py  query_db_map.json  query_registry.py
elasticdatafactory/plots/: plotter.py
elasticdatafactory/trainers/: train_deploy.py
elasticdatafactory/utilities/: helper.py  utility.py
notebooks/: data_wrangling_jenna.ipynb  develop_test_EDF.ipynb  long_time_frame_to_buy.ipynb  query_web_events_wwen.ipynb
scripts/: deploy-ghpages.sh
source/: conf.py  index.rst
tests/unit_tests/: query_db_map.json  test_queryregistry.py
