[project]
name = "elastic-data-factory"
description = "Elastic Data Factory for Feature Discovery and Visualization"
dynamic = ["version", "readme"]
authors = [
    { name = "Jenna Far", email = "jennafar@gmail.com" }
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Namakwtural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    'treelib>=1.6.1',
    'click>=8.1.3',
    'awswrangler==2.20.1',
    'boto3>=1.26.24',
    'sagemaker>=2.120.0',
    'pandas>=1.4.4',
    'numpy>=1.23.3',
    'scikit-learn>=1.2.0',
    'scipy>=1.9.1',
    'tqdm>=4.64.1',
    'matplotlib>=3.6.2',
    'seaborn>=0.12.1',
    'plotly>=5.11.0',
    'statsmodels>=0.13.5',
    'mlflow==2.2.2',
    'mlflow_connect>=0.4.0',
    'xgboost>=1.2.0',
    'sqlglot>=11.4.1'
]

[project.urls]
"Repository" = "https://git.rockfin.com/Data-Intelligence/Query-Store-for-Data-Factory"
"Bug Tracker" = "https://git.rockfin.com/Data-Intelligence/Query-Store-for-Data-Factory/issues"
"Changelog" = "https://git.rockfin.com/Data-Intelligence/Query-Store-for-Data-Factory/blob/main/CHANGELOG.md"

[project.optional-dependencies]
interactive =  ["notebook>=6.1.5", "jupyter>=1.0.0"]
docs = ["sphinx"]

[build-system]
requires = ["pip>=20.3", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "elasticdatafactory.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml
include-package-data = true

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools.package-data]
elasticdatafactory = ["requirements.txt", "tox.ini", "elasticdatafactory/version.txt", "LICENSE", "README.md"]
