[metadata]
name = Elastic-Data-Factory
version = attr: elasticdatafactory.__version__
author = Jenna Far
author_email = jennafar@gmail.com
description = Elastic Data Factory for Feature Discovery and Visualization
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license_files = LICENSE
platforms = any
url = https://github.com/JennaFar/elastic-data-factory
project_urls =
    Bug Tracker = https://github.com/JennaFar/elastic-data-factory/issues
    Changelog = https://github.com/JennaFar/elastic-data-factory/blob/master/CHANGELOG.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = elasticdatafactory
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires =
    setuptools
install_requires =
    treelib>=1.6.1
    click>=8.1.3
    awswrangler==2.20.1
    boto3>=1.26.24
    sagemaker>=2.120.0
    pandas>=1.4.4
    numpy>=1.23.3
    scikit-learn>=1.2.0
    scipy>=1.9.1
    tqdm>=4.64.1
    matplotlib>=3.6.2
    seaborn>=0.12.1
    plotly>=5.11.0
    statsmodels>=0.13.5
    mlflow==2.2.2
    mlflow_connect>=0.4.0
    xgboost>=1.2.0
    sqlglot>=11.4.1

[options.packages.find]
where = ./
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[options.extras_require]
docs =
	sphinx>=3.5
interactive =
    notebook>=6.1.5
    jupyter>=1.0.0

[options.package_data]
elasticdatafactory = requirements.txt, tox.ini, elasticdatafactory/version.txt, LICENSE, README.md
